Asocion de imagenes a una noticia

--- a/FutbolBrasil/web/app/views/index.scala.html
+++ b/FutbolBrasil/web/app/views/index.scala.html
@@ -51,7 +51,7 @@
                                 		</div>	
                                 	} else {                                    		
                                 		<div class="row-action-primary">
-                                    		<i class="icon-material-folder"></i>
+                                    		<i class="icon-material-photo"></i>
                                 		</div>                                    		
                                 	}
 
