--- a/FutbolBrasil/web/app/views/summary.scala.html
+++ b/FutbolBrasil/web/app/views/summary.scala.html
@@ -4,11 +4,33 @@
 
 	<div class="jumbotron">
 		
+		<div class="bs-docs-section">
+			<div class="row">		    	
+		    	<div class="col-lg-12">
+		    		
+					<div class="alert alert-dismissable alert-success" style="display: none;">
+					    <button type="button" class="close" data-dismiss="alert">×</button>
+					    <strong>Tudo certo!</strong> As imagens est&atilde;o associados com sucedida.
+					</div>
+					
+					<div class="alert alert-dismissable alert-danger" style="display: none;">
+    					<button type="button" class="close" data-dismiss="alert">×</button>
+    					<strong>Oh pressão!</strong> Um erro &eacute; gerado na associa&ccedil;&atilde;o de imagens.
+					</div>
+
+				</div>
+	    	</div>	
+		</div>
+			
+
+		
+		
 	    <h1>@Html(news.getHeadLine())</h1>
 	    <p>@Html(news.getSummary())</p>
 	    
 
 	    <div class="bs-docs-section">
+	    	
 	    	
 	    	<div class="row">		    	
 		    	<div class="col-lg-12">
@@ -20,10 +42,10 @@
 	    		<div class="col-lg-12">
 					<div class="bs-component">
 						<div class="list-group">
-							<div class="list-group-item">
+							<div class="list-group-item related" style="width:100%; height:auto; min-height: 70px;">
 								@for((resource, index) <-  news.getResources().zipWithIndex) {
-							    	<div class="row-picture">
-					        			<img class="circle" src="@resource.getUrl()" alt="icon" >
+							    	<div id="row-picture-@resource.getId()" data-resource="@resource.getId()" class="row-picture related" draggable="true" style="cursor: pointer;">
+					        			<img class="circle" src="@resource.getUrl()" alt="icon" style="width: 70px; height: 70px;" >
 					        		</div>	
 							    }	
 							</div>
@@ -34,32 +56,33 @@
 			</div>
 
 	    </div>
-	    
-	    <p><a class="btn btn-primary btn-lg">Adicionar</a></p>
-	    
+
     	<div class="row">		    	
-    		<div class="col-lg-12">
+	    	<div class="col-lg-12">
+				<h2>Imagens dispon&iacute;veis</h2>
+			</div>
+    	</div>	
+	    	
+    	<div class="row">		    	
+    		<div class="col-lg-12">    			
 				<div class="bs-component">
 					<div class="list-group">
-						<div class="list-group-item">
-
+						<div class="list-group-item relatable" style="width:100%; height:auto; min-height: 70px;">
 							@for((resource, index) <-  resources.zipWithIndex) {
-						    	<div class="row-picture">
-				        			<img class="circle" src="@resource.getUrl()" alt="icon" >
+						    	<div id="row-picture-@resource.getId()" data-resource="@resource.getId()" class="row-picture relatable" draggable="true" style="cursor: pointer;" >
+				        			<img class="circle" src="@resource.getUrl()" alt="icon" style="width: 70px; height: 70px;" >
 				        		</div>	
-						    }	
-						    
+						    }			    
 						</div>
-							
 					</div>
 				</div>
 			</div>
 		</div>
-	    
-	    
-	
-	    
-	    
+	    <hr />
+	    <p style="text-align: right;">
+	    	<a id="save" class="btn btn-primary btn-lg" data-news="@news.getId()">Salvar</a>
+		</p>
+	       
 	</div>
 
 }
