--- a/FutbolBrasil/web/app/views/index.scala.html
+++ b/FutbolBrasil/web/app/views/index.scala.html
@@ -34,7 +34,7 @@
 		
 	    <div class="row">		    	
 	    	<div class="col-lg-12">
-				<h2>&Uacute;ltimas not&iacute;cias</h2>
+				<h2>&Uacute;ltimas noticias</h2>
 			</div>
 	    </div>
 
