--- a/FutbolBrasil/web/app/views/main.scala.html
+++ b/FutbolBrasil/web/app/views/main.scala.html
@@ -90,6 +90,7 @@
 				});
 
 
+
 				$('#save').click(function () {
 					
 					var _data = {news:0,resources:[]};
@@ -135,6 +136,73 @@
 				});
 
 
+				$(document).on('click','div.modal-footer button.btn-primary',function(e) {
+					
+					var _id = $('#img div').attr('id');
+					
+					if ($(this).hasClass('related')) {
+						$('.list-group-item.relatable').append($('#img').html());
+						$('.list-group-item.related #' + _id).remove();
+					} else {
+						$('.list-group-item.related').append($('#img').html());
+						$('.list-group-item.relatable #' + _id).remove();
+					}
+
+					$('#img').remove();
+					$('#myModal').modal('hide');
+
+				});
+
+
+				$(document).on('click','img.img-rounded',function(e) {
+										
+					var _src = $(this).attr('src');
+
+					if ($(this).parent().hasClass('related')) {
+						
+						$(this).parent().removeClass('related');
+						$(this).parent().addClass('relatable');
+						
+						$('.modal-footer button.btn-primary').removeClass('relatable');
+						$('.modal-footer button.btn-primary').addClass('related');
+						$('.modal-footer button.btn-primary').html('Quitar');
+						
+					} else{
+						
+						$(this).parent().removeClass('relatable');
+						$(this).parent().addClass('related');
+						
+						$('.modal-footer button.btn-primary').removeClass('related');
+						$('.modal-footer button.btn-primary').addClass('relatable');
+						$('.modal-footer button.btn-primary').html('Agregar');
+						
+					}
+
+					var _html = '<div class="row">';
+						_html += '<div class="col-sm-12 col-md-12">';
+						_html += ' <div class="thumbnail">';
+						_html += '<img  alt="' + _src + '" src="' + _src +  '" >';
+						_html += '<div class="caption">';
+						_html += '<h3>Thumbnail etiqueta</h3>';
+						_html += '<p>...</p>';
+						_html += '</div>';
+						_html += '</div>';
+						_html += '</div>';
+						_html += '</div>';
+						
+
+						_html += '<div id="img" style="display:none;">';
+						_html += $(this).parent()[0].outerHTML;
+						_html += '</div>';
+						
+
+
+					$('.modal-body').empty();
+				    $('.modal-body').html(_html);
+				    
+				});
+
+
 			});
 
 		</script>
@@ -143,11 +211,16 @@
     </head>
     <body>
     	
+    	
+    	
+    	
+    	
+    	
     	<div class="container">
     	
 	    	<div class="navbar navbar-default">
 				<div class="navbar-header">	        
-			        <a class="navbar-brand" href="@controllers.routes.Application.index()">In&iacute;cio</a>
+			        <a class="navbar-brand" href="@controllers.routes.Application.index()">Inicio</a>
 			    </div>
 			</div>
     	
