--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/main.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/main.css
@@ -67,7 +67,7 @@
 	#get-checked-data.ok {color:#28701A;}
 	#get-checked-data.error {color:red;}
 
-	#wrapper, #wrapper2, #wrapperM, #wrapperMaM, #wrapperMaM2 {
+	#wrapper, #wrapper2, #wrapperM, #wrapperMaM, #wrapperMaM2, #wrapperL {
 		position: absolute;
 		z-index: 1;
 		top: 50px; 
@@ -77,7 +77,7 @@
 		background: #E2E2E2;
 	}
 	
-	#wrapper2, #wrapperM {
+	#wrapper2, #wrapperM, #wrapperL {
 		background: #FFFFFF;
 	}
 	
