--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/res/xml/config.xml
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/res/xml/config.xml
@@ -17,7 +17,7 @@
     <preference name="useBrowserHistory" value="true" />
     <preference name="orientation" value="portrait" />
     <preference name="target-device" value="universal" />
-    <preference name="fullscreen" value="true" />
+    <preference name="fullscreen" value="false" />
     <preference name="webviewbounce" value="true" />
     <preference name="prerendered-icon" value="true" />
     <preference name="stay-in-webview" value="false" />
@@ -45,4 +45,7 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
+    <feature name="PushPlugin">
+        <param name="android-package" value="com.plugin.gcm.PushPlugin" />
+    </feature>
 </widget>
