--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/index.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/index.css
@@ -17,112 +17,99 @@
  * under the License.
  */
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-}
-
-body,ul,li {
-	padding: 0;
-	margin: 0;
-	border: 0;
+    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
 body {
-	font-size: 12px;
-	font-family: ubuntu, helvetica, arial;
-}
-
-#header {
-	width: 100%;
-	height: 45px;
-	line-height: 45px;
-	background: #CD235C;
-	padding: 0;
-	color: #eee;
-	font-size: 20px;
-	text-align: center;
-	font-weight: bold;
-}
-
-#wrapper {
-	position: relative;
-	z-index: 1;
-	height: 100%;
-	width: 100%;
-	background: #ccc;
-	overflow: hidden;
-	-ms-touch-action: none;
-}
-
-#scroller {
-	position: absolute;
-	z-index: 1;
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
-	width: 2400px;
-	height: 100%;
-	-webkit-transform: translateZ(0);
-	-moz-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	-o-transform: translateZ(0);
-	transform: translateZ(0);
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-text-size-adjust: none;
-	-moz-text-size-adjust: none;
-	-ms-text-size-adjust: none;
-	-o-text-size-adjust: none;
-	text-size-adjust: none;
-}
-
-#scroller ul {
-	list-style: none;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-}
-
-#scroller li {
-	width: 120px;
-	height: 160px;
-	float: left;
-	line-height: 160px;
-	border-right: 1px solid #ccc;
-	border-bottom: 1px solid #ccc;
-	background-color: #fafafa;
-	font-size: 14px;
-	overflow: hidden;
-	text-align: center;
-}
-
-p {
-	font-size: 16px;
-	padding: 1.2em;
-	line-height: 200%;
-}
-
-#over
-{
-    display: inline-block;
-		position:relative;
+    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
+    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
+    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
+    background-color:#E4E4E4;
+    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
+    background-image:-webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, #A7A7A7),
+        color-stop(0.51, #E4E4E4)
+    );
+    background-attachment:fixed;
+    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-size:12px;
+    height:100%;
+    margin:0px;
+    padding:0px;
+    text-transform:uppercase;
     width:100%;
-    height:30%;
-    text-align: center; /*handles the horizontal centering*/
-}
-/*handles the vertical centering*/
-.Centerer
-{
-    display: inline-block;
-    height: 100%;
-    horizontal-align: middle;
-}
-.Centered
-{
-    display: inline-block;
-    horizontal-align: middle;
 }
 
-.img-panning.up {-webkit-transform: translate3d(0, -50%, 0); transform: translate3d(0, -50%, 0);}
+/* Portrait layout (default) */
+.app {
+    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
+    position:absolute;             /* position in the center of the screen */
+    left:50%;
+    top:50%;
+    height:50px;                   /* text area height */
+    width:225px;                   /* text area width */
+    text-align:center;
+    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
+    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
+                                   /* offset horizontal: half of text area width */
+}
+
+/* Landscape layout (with min-width) */
+@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
+    .app {
+        background-position:left center;
+        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
+        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
+                                      /* offset horizontal: half of image width and text area width */
+    }
+}
+
+h1 {
+    font-size:24px;
+    font-weight:normal;
+    margin:0px;
+    overflow:visible;
+    padding:0px;
+    text-align:center;
+}
+
+.event {
+    border-radius:4px;
+    -webkit-border-radius:4px;
+    color:#FFFFFF;
+    font-size:12px;
+    margin:0px 30px;
+    padding:2px 0px;
+}
+
+.event.listening {
+    background-color:#333333;
+    display:block;
+}
+
+.event.received {
+    background-color:#4B946A;
+    display:none;
+}
+
+@keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+ 
+@-webkit-keyframes fade {
+    from { opacity: 1.0; }
+    50% { opacity: 0.4; }
+    to { opacity: 1.0; }
+}
+ 
+.blink {
+    animation:fade 3000ms infinite;
+    -webkit-animation:fade 3000ms infinite;
+}
