--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/_css/main.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/_css/main.css
@@ -146,7 +146,7 @@
 	}
 	
 	
-	figure { width: 100%; height: auto; position:relative; margin: 2px 0; }
+	figure { width: 100%; height: auto; position:relative; }
 	figure img { width: 100%;  height: auto;  position:relative; left:0; top:0; }			
 	figcaption  {
 		position: absolute;		
