--- a/AGataDoDia/Pimp/pimp/app/views/index.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/index.scala.html
@@ -102,11 +102,16 @@
 						</li>
     				}
 
+
 				</ul>
-	    				    		
-	    		
 	    	</div>
-	    </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                    <a href="@controllers.routes.Application.getPost(0)" class="btn btn-primary">Add</a>
+            </div>
+        </div>
+
 	</div>
 
 }
