--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -14,6 +14,7 @@
         
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/ripples.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/material-wfont.min.css")">
+        <link rel="stylesheet" type="text/css" media="screen" href="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.min.css" />
                 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-2.1.1.min.js")" type="text/javascript"></script>
