--- a/AGataDoDia/Pimp/pimp/app/views/summary.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/summary.scala.html
@@ -1,4 +1,8 @@
-@(post: models.content.posts.Post, resources: List[String], countries: List[models.basic.Country], languages: List[models.basic.Language], women: List[models.content.women.Woman])
+@(post: models.content.posts.Post, resources: List[String], countries: List[models.basic.Country], languages: List[models.basic.Language], women: List[models.content.women.Woman], networks: List[models.content.women.SocialNetwork])
+
+
+
+
 
 @main("A Gata Do Dia - Post") {
 
@@ -21,20 +25,49 @@
 				</div>
 	    	</div>	
 		</div>
-			
-
-		
-		
-	    <h1>@Html(""+post.getIdPost()) - @Html(post.getWoman().getName())</h1>
 
 
+
+        @if(post.getWoman() != null){
+	        <h1>@Html(""+post.getIdPost()) - @Html(post.getWoman().getName())</h1>
+        }else{
+            <h1>New Post</h1>
+        }
         @if(post.getPush == 1){
             <p class="text-info">Scheduled to push on @Html(post.getPushDateAsString())</p>
+            <div class="container">
+                <div class="row">
+                    <div class='col-sm-6'>
+                        <div class="form-group">
+                            <div class='input-group date' id='datetimepicker7'>
+                                <input type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <script type="text/javascript">
+                        $(function () {
+                            $('#datetimepicker7').datetimepicker({
+                                defaultDate: "11/1/2013",
+                                disabledDates: [
+                                    moment("12/25/2013"),
+                                    new Date(2013, 11 - 1, 21),
+                                    "11/22/2013 00:53"
+                                ]
+                            });
+                        });
+                    </script>
+                </div>
+            </div>
         }else{
             @if(post.getPush == 2){
-                <p class="text-danger">Pushing</p>
+                <p class="text-danger">Pushing...</p>
             }else{
-                <p class="text-success">Pushed on @Html(post.getPushDateAsString())</p>
+                @if(post.getPush == 3){
+                    <p class="text-success">Pushed on @Html(post.getPushDateAsString())</p>
+                }
             }
         }
 
@@ -59,7 +92,30 @@
             <div class="col-lg-12">
                 <input type="text" class="form-control" id="inputSouce" placeholder="Titulo" value="@post.getSource()">
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="bs-component">
+                        <div class="form-group">
+                            <div class="col-lg-12">
+                                <select class="form-control" id="selectNetwork">
+                                    @for((network, index) <-  networks.zipWithIndex) {
+                                        @if(post.getSocialNetwork() != null && network.getIdSocialNetwork() == post.getSocialNetwork().getIdSocialNetwork()){
+                                            <option id="row-selectable-network-@network.getIdSocialNetwork()" data-resource="@network.getIdSocialNetwork()" selected>@Html(network.getName())</option>
+                                        }else{
+                                            <option id="row-selectable-network-@network.getIdSocialNetwork()" data-resource="@network.getIdSocialNetwork()">@Html(network.getName())</option>
+                                        }
+                                    }
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
+
+
 
 
 
@@ -76,10 +132,10 @@
                         <div class="col-lg-12">
                             <select class="form-control" id="selectWoman">
                                 @for((woman, index) <-  women.zipWithIndex) {
-                                    @if(woman.getIdWoman() == post.getWoman().getIdWoman()){
-                                        <option id="row-selectable-woman-@woman.getIdWoman" data-resource="@woman.getIdWoman" selected>@Html(woman.getName())</option>
+                                    @if(post.getWoman() != null && woman.getIdWoman() == post.getWoman().getIdWoman()){
+                                        <option id="row-selectable-woman-@woman.getIdWoman()" data-resource="@woman.getIdWoman()" selected>@Html(woman.getName())</option>
                                     }else{
-                                        <option id="row-selectable-woman-@woman.getIdWoman" data-resource="@woman.getIdWoman">@Html(woman.getName())</option>
+                                        <option id="row-selectable-woman-@woman.getIdWoman()" data-resource="@woman.getIdWoman()">@Html(woman.getName())</option>
                                     }
                                 }
                             </select>
@@ -135,11 +191,11 @@
                     <div class="list-group">
                         <div class="list-group-item relatable" style="width:100%; height:auto; min-height: 100px;">
                             @for((localization, index) <-  post.getLocalizations().zipWithIndex) {
-                            <div id="row-localization-@localization.getIdPostHasLocalization()" data-resource="@localization.getIdPostHasLocalization()" >
-                                <h3>@Html(localization.getLanguage().getName())</h3>
-                                <input type="text" class="form-control" id="input-localization-title-@localization.getIdPostHasLocalization()" placeholder="Title" value="@localization.getTitle()">
-                                <input type="text" class="form-control" id="input-localization-content-@localization.getIdPostHasLocalization()" placeholder="Content" value="@localization.getContent()">
-                            </div>
+                                <div id="row-localization-@localization.getIdPostHasLocalization()" data-resource="@localization.getIdPostHasLocalization()" >
+                                    <h3>@Html(localization.getLanguage().getName())</h3>
+                                    <input type="text" class="form-control" id="input-localization-title-@localization.getIdPostHasLocalization()" placeholder="Title" value="@localization.getTitle()">
+                                    <input type="text" class="form-control" id="input-localization-content-@localization.getIdPostHasLocalization()" placeholder="Content" value="@localization.getContent()">
+                                </div>
                             }
                         </div>
                     </div>
@@ -195,6 +251,15 @@
 			</div>
 
 	    </div>
+
+
+        <div class="form-group">
+            <label for="inputFile" class="col-lg-2 control-label">File</label>
+            <div class="col-lg-10">
+                <input type="text" readonly="" class="form-control floating-label" placeholder="Browse...">
+                <input type="file" id="inputFile" multiple="">
+            </div>
+        </div>
 
     	<div class="row">		    	
 	    	<div class="col-lg-12">
