--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -10,18 +10,22 @@
     	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-datetimepicker.min.css")">
         <!--link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/carousel.css")"-->
         
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/ripples.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/material-wfont.min.css")">
-        <link rel="stylesheet" type="text/css" media="screen" href="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/master/build/css/bootstrap-datetimepicker.min.css" />
-                
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-2.1.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/moment.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-datetimepicker.js")" type="text/javascript"></script>
 
         <script src="@routes.Assets.at("javascripts/ripples.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/material.min.js")" type="text/javascript"></script>
+
         
    
 		<script>
