rollback del merge loco que se invento sourcetree

--- a/FutbolBrasil/web/app/views/main.scala.html
+++ b/FutbolBrasil/web/app/views/main.scala.html
@@ -109,7 +109,7 @@
 					
 					
 					
-					var _oAjax = _fPostAjaXJSON('http://revan:9000/resource/update',_data);
+					var _oAjax = _fPostAjaXJSON('http://127.0.0.1:9100/resource/update',_data);
 
 					if (_oAjax) {
 						
