--- a/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/default.css
+++ b/AGataDoDia/AGataDoDia/AGataDoDia/platforms/android/assets/www/css/default.css
@@ -8,7 +8,9 @@ row:not(input):not(textarea) {
 	html { -ms-touch-action: none; }
 	body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; }
 	
-	#wrapper, #wrapper2 {	
+	#wrapper-bootstrap,
+	#wrapper, 
+	#wrapper2 {	
 		position: absolute;
 		z-index: 1;
 		top: 50px; 
@@ -19,7 +21,9 @@ row:not(input):not(textarea) {
 	}
 
 	#wrapper .container-fluid .row i , 
-	#wrapper2 .container-fluid .row i {font-size: 2em;}
+	#wrapper2 .container-fluid .row i {
+		font-size: 2em;
+	}
 
 	header{
 		position: absolute; 
@@ -49,7 +53,6 @@ row:not(input):not(textarea) {
 		color:#ED2226; 
 	}	
 	
-			
 	body #wrapper,
 	body #wrapper .scroller,
 	body #wrapper .scroller .container,    			
@@ -59,6 +62,7 @@ row:not(input):not(textarea) {
 		margin: 0 !important; 
 	}
 	
+	
 	body #wrapper2,
 	body #wrapper2 .scroller,
 	body #wrapper2 .scroller .container,    			
@@ -67,7 +71,8 @@ row:not(input):not(textarea) {
 		padding: 0 !important; 
 		margin: 0 !important; 
 	}
-	
+
+
 	img {
 		border-radius : 0 !important;	
 	}
@@ -121,7 +126,9 @@ row:not(input):not(textarea) {
 		margin-bottom: 5px;
 		color: #ED2226;	
 	}
-
+	
+	
+	body.content-signin main .container .row #wrapper1 .scroller .container figure,
 	body #wrapper .scroller .container figure,
 	body #wrapper2 .scroller .container figure {
 		position:relative;  
@@ -130,7 +137,8 @@ row:not(input):not(textarea) {
 		padding: 0; 
 		bottom: 0;
 	}
-
+	
+	body.content-signin main .container .row #wrapper1 .scroller .container figure img,
 	body #wrapper .scroller .container figure img,
 	body #wrapper2 .scroller .container figure img { 
 		width: 100%;  
@@ -138,8 +146,9 @@ row:not(input):not(textarea) {
 		min-height: 200px;
 	}			
 	
+	body.content-signin main .container .row #wrapper1 .scroller .container figure figcaption,
 	body #wrapper .scroller .container figure figcaption,
-	body #wrapper2 .scroller .container figure figcaption  {
+	body #wrapper2 .scroller .container figure figcaption {
 		position: absolute;		
 		width:100%;
 		height: auto;
@@ -151,24 +160,14 @@ row:not(input):not(textarea) {
 	    opacity: 0.8;	    	
 	}
 
-	body.content-signin #wrapper .scroller .container figure figcaption {
-		position: absolute;		
+	body.content-signin main .container  {		
 		width:100%;
-		height: auto;
-	    /*line-height: 40px;*/		
-		text-align: left;	   
-	    background-color:#E2E2E1;	    
-	    bottom: 0;
-	    color: #000000;
-	    opacity: 0.8;	    	
+		height: auto;		
+	   	margin-top: 0px;
+	    color: #FFFFFF;
+	    background:#000000;
 	}
 
-
-	.center {
-	 	margin: auto; 
-	 	position: absolute; 
-	 	top: 0px;
-	 	bottom: 0px; 
-	 	left: 0px; 
-		right: 0px
+	body {
+		background-color: #000000;
 	}
