PIMP: interfaces de crear post

--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -236,6 +236,17 @@
                                     <li><a href="javascript:void(0)">Crear</a></li>
                                 </ul>
                             </li>
+
+                            <li class="dropdown">
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Post<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="@controllers.routes.PostsView.list()">Listar</a></li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Operaciones</li>
+                                    <li><a href="@controllers.routes.PostsView.blank">Crear</a></li>
+                                </ul>
+                            </li>
+
                         </ul>
                     </div>
                 </div>
