PIMP: vistas de countries y languores con formatters de las relaciones

--- a/AGataDoDia/Pimp/pimp/app/views/main.scala.html
+++ b/AGataDoDia/Pimp/pimp/app/views/main.scala.html
@@ -247,6 +247,26 @@
                                 </ul>
                             </li>
 
+                            <li class="dropdown">
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Languages<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="@controllers.routes.LanguagesView.list()">Listar</a></li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Operaciones</li>
+                                    <li><a href="@controllers.routes.LanguagesView.blank">Crear</a></li>
+                                </ul>
+                            </li>
+
+                            <li class="dropdown">
+                                <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown">Countries<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="@controllers.routes.CountriesView.list()">Listar</a></li>
+                                    <li class="divider"></li>
+                                    <li class="dropdown-header">Operaciones</li>
+                                    <li><a href="@controllers.routes.CountriesView.blank">Crear</a></li>
+                                </ul>
+                            </li>
+
                         </ul>
                     </div>
                 </div>
